/*
 * Copyright 2017 The Kythe Authors. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package kythe.proto;

option go_package = "kythe.io/kythe/proto/identifier_go_proto";
option java_package = "com.google.devtools.kythe.proto";

service IdentifierService {
  // Find returns a list of tickets associated with a given identifier string.
  rpc Find(FindRequest) returns (FindReply);
}

message FindRequest {
  // The qualified name of the identifier being searched for
  string identifier = 1;

  // Restricts the matches to the given corpus labels.
  repeated string corpus = 2;

  // Restricts the match to the given languages.
  repeated string languages = 3;
}

message FindReply {
  message Match {
    // Kythe ticket for the matched node.
    string ticket = 1;

    // Kind of the node being referenced.
    string node_kind = 2;

    // Subkind of the node being referenced.
    string node_subkind = 3;

    // The local identifier for the node.
    string base_name = 4;

    // The fully qualified identifier for the node.
    string qualified_name = 5;
  }

  // The list of matches found
  repeated Match matches = 1;
}
